# django-htmx-test

./: db.sqlite3  flake.nix  manage.py  pyproject.toml
htmxtest/: asgi.py  settings.py  urls.py  wsgi.py
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/: _base.html  index.html  middleware-tester-table.html  middleware-tester.html  todo-list.html
