[tool.poetry]
name = "htmxtest"
version = "0.1.0"
description = ""
authors = ["Paul Ellis Linton <plinton@musicalcomputer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-htmx = "^1.8.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
